Add Login page with Firebase Auth

--- a/VirtualTourist/Info.plist
+++ b/VirtualTourist/Info.plist
@@ -34,5 +34,20 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb123642918289216</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>123642918289216</string>
+    <key>FacebookDisplayName</key>
+    <string>VirtualTourist</string>
+    
 </dict>
 </plist>
